---------------------------------------------------------------------------------------------------
Version: 5.2.2
Date: ????
  Changes:
    - Added mod setting to change the background of the button between dark and light grey
---------------------------------------------------------------------------------------------------
Version: 5.2.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.1.14
Date: 2020-11-15
  Bugfixes:
    - Fixed assembler selection not showing all machines when a mod gets added
---------------------------------------------------------------------------------------------------
Version: 5.1.13
Date: 2020-10-19
  Changes:
    - Using the shortcut or hotkey to get a module inserter takes one from the inventory before creating a new one
---------------------------------------------------------------------------------------------------
Version: 5.1.12
Date: 2020-10-17
  Changes:
    - Added an entry when an entity is removed from ModuleInserter configurations due to mod changes
  Bugfixes:
    - Fixed crash when updating to a new version and at the same time another mod changes/removes entities
---------------------------------------------------------------------------------------------------
Version: 5.1.11
Date: 2020-09-30
  Bugfixes:
    - Fixed GUI not updating when loading a preset and "Close GUI after loading" is active
---------------------------------------------------------------------------------------------------
Version: 5.1.10
Date: 2020-09-28
  Bugfixes:
    - Fixed tooltips not being updated correctly
---------------------------------------------------------------------------------------------------
Version: 5.1.9
Date: 2020-09-28
  Changes:
    - Pressing E or Escape closes the gui
    - Added a pin button to the gui, to keep it open when pressing E/Escape